linting + update version